--- a/.github/workflows/task.yml
+++ b/.github/workflows/task.yml
@@ -9,7 +9,7 @@ jobs:
    - name: adding code
      uses: actions/checkout@v4
    - name: Install NodeJS
-     uses: actions/srtup-node@v4
+     uses: actions/setup-node@v4
      with:
       node-version: 18
    - name: Install dependencies
@@ -22,7 +22,7 @@ jobs:
    - name: adding code
      uses: actions/checkout@v4
    - name: Install NodeJS
-     uses: actions/srtup-node@v4
+     uses: actions/setup-node@v4
      with:
       node-version: 18
    - name: Install dependencies
