--- a/.github/workflows/task.yml
+++ b/.github/workflows/task.yml
@@ -28,7 +28,7 @@ jobs:
    - name: Install dependencies
      run: npm ci
    - name: build project
-     run: npm build
+     run: npm test
    - name: deploy
      run: echo "deploying"    
        
